2005-08-29 00:57  hjanuschka

	* ChangeLog, include/bartlby.h, src/config.c, src/sched.c,
	  src/libs/mysql.c: config.c: fixed fclose BUG (too many open files
	  ) missing fclose service_active is now set by data_lib and
	  acutally used by scheduler

2005-08-29 00:25  hjanuschka

	* ChangeLog, src/libs/Makefile, src/libs/mysql.c: [no log message]

2005-08-28 20:00  hjanuschka

	* src/: bartlby.c, libs/mysql.c: data_lib api extended,
	  service/add/delete/update

2005-08-28 18:02  hjanuschka

	* src/: check.c, config.c, global.c, sched.c, shm.c, trigger.c,
	  client/agent.c, libs/mysql.c, tools/shmt.c: CVS Header

2005-08-28 17:59  hjanuschka

	* ChangeLog, src/bartlby.c: CVS header ;-)

2005-08-28 17:49  hjanuschka

	* makedist: [no log message]

2005-08-28 17:49  hjanuschka

	* ChangeLog, Makefile, bartlby.cfg, src/libs/mysql.c: Api extended
	  (for php-extension):	       AddServer       DeleteServer
	  ModifyServer	  GetServerById

2005-08-28 15:44  hjanuschka

	* ChangeLog, Makefile, include/bartlby.h, src/bartlby.c,
	  src/trigger.c, src/client/agent.c, src/libs/mysql.c: [no log
	  message]

2005-08-28 04:50  hjanuschka

	* ChangeLog, Makefile: [no log message]

2005-08-28 04:44  hjanuschka

	* src/client/: Makefile, agent.c: initial import

2005-08-28 04:43  hjanuschka

	* Makefile, bartlby.cfg, src/check.c, src/config.c: fopen check

2005-08-28 03:12  hjanuschka

	* src/trigger.c, trigger/sample.sh: intial import :-)

2005-08-28 03:11  hjanuschka

	* bartlby.cfg, include/bartlby.h, src/Makefile, src/check.c,
	  src/global.c, src/sched.c, src/libs/mysql.c: some new config
	  variables	*trigger_dir passive, group checks added

	  decode, encode moved to global

	  scheduler fix ups (workers on SHM)

	  module clean ups, extension: write back of svc*

2005-08-28 01:39  hjanuschka

	* Makefile, bartlby.cfg, lib, include/bartlby.h, src/Makefile,
	  src/bartlby.c, src/check.c, src/config.c, src/global.c, src/lib,