@@ -1,3 +1,7 @@
+2005-08-30 20:28  hjanuschka
+
+	* ChangeLog: [no log message]
+
 2005-08-29 00:57  hjanuschka
 
 	* ChangeLog, include/bartlby.h, src/config.c, src/sched.c,
